// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Attributes not rendered on a wrapper component 1`] = `<div />`;

exports[`Attributes passed from wrapper component to element 1`] = `
<div>
  <span
    data-attr="Other custom attr"
    id="default-id"
  />
</div>
`;

exports[`Attributes rendered on an element 1`] = `
<div
  data-name="Default name"
  id="default-id"
/>
`;

exports[`Attributes rendered on an element with parent props 1`] = `
<div
  data-name="Custom name"
  id="custom-id"
/>
`;

exports[`Classes with a single class 1`] = `
<div
  className="some-class"
/>
`;

exports[`Classes with conditional classes 1`] = `
<div
  className="base-class small"
/>
`;

exports[`Classes with conditional classes 2`] = `
<div
  className="base-class big"
/>
`;

exports[`Classes with multiple classes 1`] = `
<div
  className="some-class another-class"
/>
`;

exports[`Classes with no classes 1`] = `<div />`;

exports[`Conditional rendering using a child-function 1`] = `
<div
  className="root"
/>
`;

exports[`Conditional rendering using a child-function 2`] = `
<div
  className="root"
>
  <img
    src="the-image.jpg"
  />
</div>
`;

exports[`Default values with changed defaults 1`] = `
<div
  data-text="default text 2"
/>
`;

exports[`Default values with changed defaults 2`] = `
<div
  data-text="custom text"
/>
`;

exports[`Default values with wrapper component 1`] = `
<div>
  default text
</div>
`;

exports[`Default values with wrapper component 2`] = `
<div>
  custom text
</div>
`;

exports[`Lists simple example 1`] = `
<div
  className="root"
>
  <div
    className="item"
  >
    <img
      alt="Image One"
      className="image"
      src="image1.jpg"
    />
  </div>
  <div
    className="item"
  >
    <img
      alt="Image Two"
      className="image"
      src="image2.jpg"
    />
  </div>
</div>
`;

exports[`Props selected from grandparent 1`] = `
<div
  className="outer"
>
  <div
    className="outer-2"
  >
    <img
      alt="The Image"
      src="the-image.jpg"
    />
    <span>
      The Image
    </span>
  </div>
</div>
`;

exports[`Props selected from parent 1`] = `
<div
  className="outer"
>
  <img
    alt="The Image"
    src="the-image.jpg"
  />
  <span>
    The Image
  </span>
</div>
`;

exports[`Reducing a single prop with a transform function 1`] = `
<div
  className="root"
>
  <img
    alt="The Image"
    src="http://example.com/the-image.jpg"
  />
</div>
`;

exports[`Reducing multiple props with a transform function 1`] = `
<div
  className="root"
>
  <div
    className="wrapper"
  >
    <img
      alt="The Image"
      src="http://example.com/the-image.jpg"
    />
  </div>
</div>
`;

exports[`Reducing multiple props with a transform function 2`] = `
<div
  className="root"
>
  <div
    className="wrapper"
  >
    <img
      alt="The Image"
      src="https://example.com/the-image.jpg"
    />
  </div>
</div>
`;
